# CMake-Tutorial

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py
lib/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
mylib/: CMakeLists.txt
mylib/includes/: mylib.h
mylib/src/: mylib.cpp
